apps/prowlarr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
spec:
  template:
    spec:
      containers:
        - name: prowlarr
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: prowlarr-tls
            items:
              - key: keystore.p12
                path: keystore.p12
                mode: 0640
