apps/prowlarr/overlays/nishir/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  defaultBackend:
    service:
      name: prowlarr
      port:
        name: https
