apps/prowlarr/overlays/nishir/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr-allow-apps
  namespace: shikanime
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: lidarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: whisparr
      ports:
        - port: https
